Fix cart display on mobile device

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ body {
     gap: 10px;
     justify-content: center;
     align-content: flex-start;
+    padding-bottom: 70px;
 }
 
 .product-container {
@@ -143,6 +144,7 @@ input[type="button"].product-element:hover {
     position: fixed;
     bottom: 10px;
     right: 10px;
+    text-align: center;
 }
 
 #shopping-cart table {
@@ -150,6 +152,8 @@ input[type="button"].product-element:hover {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.9);
     display: none;
+    overflow-y: scroll;
+    height: 70vh;
 }
 
 #cart-title {
@@ -234,7 +238,7 @@ input[type="number"] {
 
 #minimise-cart {
     color: whitesmoke;
-    width: 50%;
+    width: 70%;
     margin: 0px auto;
     padding: 5px 0px;
     background-color: violet;
@@ -254,8 +258,59 @@ input[type="number"] {
 
 
 /* Small Screens */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 760px) {
     .title {
         letter-spacing: 0;
     }
+
+    #shopping-cart {
+        left: 10px;
+        text-align: center;
+    }
+
+    #cart-title {
+        background-color: purple;
+    }
+
+    #shopping-cart table {
+        background-color: black;
+        border: 1px solid white;
+        display: flex;
+        align-content: center;
+    }
+
+    thead.shopping-cart-row {
+        display: none;
+        box-sizing: border-box;
+    }
+
+    tbody.shopping-cart-row tr {
+        display: block;
+        box-sizing: border-box;
+        width: 100%;
+        margin: 10px 0px;
+        border: 5px solid purple;
+        border-radius: 5px;
+    }
+
+    tbody.shopping-cart-row, tbody.shopping-cart-row td {
+        display: block;
+        box-sizing: border-box;
+        width: 100%;
+        padding: 5px 0px;
+    }
+
+    tbody.shopping-cart-row td {
+        background-color: rgba(238, 130, 238, 0.3);
+    }
+
+    tfoot.shopping-cart-row {
+        border: 2px solid white;
+        box-sizing: border-box;
+    }
+
+    tfoot.shopping-cart-row, tfoot.shopping-cart-row tr, tfoot.shopping-cart-row td {
+        width: 100%;
+    }
+
 }
